cdebconf (0.73) UNRELEASED; urgency=low

  * Colin Watson
    - Set NEWT_FLAG_RETURNEXIT on multiselect checkboxes (closes: #252751).
    - Fix compiler warning in text frontend.
    - Set window title on GO in gtk frontend.
    - Make cdebconf-gtk-udeb packaging work (still not built by default).

 -- Colin Watson <cjwatson@debian.org>  Mon, 11 Oct 2004 18:42:59 +0100

cdebconf (0.72) unstable; urgency=low

  * Colin Watson
    - gtk frontend work (not built for sarge, so no risk):
      + Allocate choices, choices_translated, and defvals dynamically. Fixes
        several crash bugs.
      + Fix a type mismatch that generated a compiler warning.
      + Disable help popup on multiselects, since it made it impossible to
        actually select anything. Ditto on password keyboard focus grab.
      + Implement the text type, just as an alias of note for now.
      + Drop the old back/continue buttons entirely, as they only appear
        sometimes and having both them and the druid-style buttons is very
        confusing. Fix sensitivity of druid-style buttons.
  * Updated translations: 
    - Welsh (cy.po) by Dafydd Harries
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan
    - Latvian (lv.po) by Aigars Mahinovs
    - Dutch (nl.po) by Bart Cornelis
    - Polish (pl.po) by Bartosz Fenski
    - Romanian (ro.po) by Eddy Petrisor
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Wed,  6 Oct 2004 14:20:44 -0400

cdebconf (0.71) unstable; urgency=low

  * Colin Watson
    - Fix some compiler warnings.
    - cdebconf conflicts with debconf-doc (closes: #274795).
  * Updated translations:
    - Arabic (ar.po) by Ossama M. Khayat
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Steve Langasek
    - Czech (cs.po) by Miroslav Kure
    - Welsh (cy.po) by Dafydd Harries
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Dennis Stampfer