@@ -3,8 +3,11 @@ cdebconf (0.73) UNRELEASED; urgency=low
   * Colin Watson
     - Set NEWT_FLAG_RETURNEXIT on multiselect checkboxes (closes: #252751).
     - Fix compiler warning in text frontend.
-    - Set window title on GO in gtk frontend.
-    - Make cdebconf-gtk-udeb packaging work (still not built by default).
+    - gtk frontend work:
+      + Set window title on GO.
+      + Make cdebconf-gtk-udeb packaging work (still not built by default).
+      + Make the Forward button the default widget, so that pressing Enter
+        activates it.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 11 Oct 2004 18:42:59 +0100
 
